--- a/FileManager/res/values-ms/strings.xml
+++ b/FileManager/res/values-ms/strings.xml
@@ -1,103 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?><!--
- * Copyright (C) 2007-2008 OpenIntents.org
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
-
-
--->
+﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="about_translators">translator-credits</string>
-    <string name="about_comments">Manage files on the SD card with OI File Manager.</string>
-
-
-    <string name="app_name">OI File Manager</string>
-    <string name="menu_delete">Padam</string>
     <string name="menu_rename">Nama semula</string>
     <string name="menu_send">Hantar</string>
     <string name="menu_open">Buka</string>
-    <string name="menu_move">Potong</string>
-    <string name="menu_copy">Salinan</string>
-    <string name="menu_details">Butiran</string>
-    <string name="menu_more">Lebih</string>
+
     <string name="menu_compress">Kompres (ZIP)</string>
-    <string name="menu_extract">Ekstrak (ZIP)</string>
-    <string name="menu_include_in_media_scan">Termasuk dalam imbasan media</string>
-    <string name="menu_exclude_from_media_scan">Mengecualikan daripada imbasan media</string>
-    <string name="menu_bookmark">Bookmark</string>
     <string name="create_new_folder">Buat folder baru</string>
     <string name="folder_name">Nama folder</string>
     <string name="this_folder_is_empty">Fail ini kosong.</string>
     <string name="really_delete">Adakah anda pasti ingin menghapuskan %s?</string>
-    <string name="title_warning_some_may_not_work">Amaran</string>
-    <string name="warning_some_may_not_work">Antara pilihan-pilihan berikut mungkin tidak berfungsi.</string>
-    <string name="show_warning_again">Show amaran lagi</string>
-
     <string name="really_delete_multiselect">Adakah anda pasti ingin menghapuskan %d fail?</string>
-    <string name="multiselect_title">Pilih berbilang fail</string>
-    <string name="pick_title">Pemilih fail</string>
-
-    <string name="details_type">Jenis</string>
-    <string name="details_type_folder">Folder</string>
-    <string name="details_type_file">Fail</string>
-    <string name="details_type_other">Lain-lain</string>
-    <string name="details_size">Saiz</string>
-    <string name="details_permissions">Kebenaran</string>
-    <string name="details_hidden">Tersembunyi</string>
-    <string name="details_lastmodified">Tarikh Terakhir Kemaskini</string>
-    <string name="details_yes">Ya</string>
-    <string name="details_no">Tiada</string>
     <string name="copied_file_name">Salinan %s</string>
 
     <string name="copied_file_name_2">Copy %1$d daripada %2$s</string>
-    <string name="media_scan_included">Folder ini akan dimasukkan ke dalam imbasan media seterusnya.</string>
-    <string name="media_scan_excluded">Folder ini akan dikecualikan semasa imbasan media seterusnya.</string>
-    <string name="error_generic">Ralat berlaku:</string>
-    <string name="error_media_scan">Tidak boleh menukar tetapan imbasan media.</string>
     <string name="send_not_available">Tiada aplikasi tersedia untuk dihantar.</string>
     <string name="application_not_available">Permohonan tidak terdapat</string>
-
-    <string name="settings">Tetapan</string>
-    <string name="preference_advanced_features">Ciri-ciri canggih</string>
-    <string name="preference_mediascan_title">Exclude from media scan</string>
-    <string name="preference_mediascan_summary_on">Show menu item to exclude folders from media scan.</string>
-    <string name="preference_mediascan_summary_off">Hide menu item to exclude folders from media scan.</string>
-    <string name="preference_showallwarning_title">Show all warnings</string>
-    <string name="preference_showallwarning_summary_on">Show all warning messages</string>
-    <string name="preference_showallwarning_summary_off">Suppress warning messages</string>
-    <string name="preference_displayhiddenfiles_title">Display hidden files</string>
-    <string name="preference_displayhiddenfiles_summary_on">Display hidden files</string>
-    <string name="preference_displayhiddenfiles_summary_off">Hide hidden files</string>
-    <string name="preference_sort_settings">Tetapan jenis</string>
-    <string name="preference_sortby">Disusun mengikut</string>
-    <string name="preference_sortby_ascending">Dalam susunan menaik</string>
-    <string name="preference_sortby_ascending_summary_on">Jenis dalam susunan menaik</string>
-    <string name="preference_sortby_ascending_summary_off">Jenis dalam susunan menurun</string>
-
-    <string-array name="preference_sortby_names">
-        <item>Nama</item>
-        <item>Saiz</item>
-        <item>Tarikh terakhir kemaskini</item>
-        <item>File extension</item>
-    </string-array>
-
-    <string name="preference_usedarktheme_title">Use dark theme (Requires restart of app)</string>
-    <string name="preference_usedarktheme_summary_on">Dark theme selected</string>
-    <string name="preference_usedarktheme_summary_off">Light theme selected</string>
-
-    <string name="saveas_no_file_picked">Anda belum memilih mana-mana fail.</string>
-    <string name="saveas_error">Kesilapan berlaku.</string>
-    <string name="saveas_file_saved">Fail berjaya disimpan!</string>
 
     <string name="compressing_success">Perkara dimampatkan berjaya</string>
     <string name="compressing_error">Tidak dapat memampatkan item</string>
@@ -105,24 +23,9 @@
     <string name="extracting_error">Tidak dapat ekstrak item</string>
     <string name="extracting">Mengekstrak&#8230;</string>
     <string name="compressing">Memampatkan&#8230;</string>
-    <string name="menu_bookmarks">Penanda</string>
-    <string name="menu_search">Carian</string>
-    <string name="menu_create_folder">Buat folder</string>
-    <string name="menu_paste">Pes</string>
-    <string name="menu_multiselect">Pelbagai pilih</string>
-    <string name="menu_settings">Tetapan</string>
-    <string name="menu_donate">Donate</string>
 
     <string name="menu_create_shortcut">Membuat jalan pintas</string>
     <string name="send_chooser_title">Hantar menggunakan:</string>
-    <string name="menu_check_all">Memeriksa semua</string>
-    <string name="menu_uncheck_all">Nyahtanda semua</string>
-    <string name="selected">dipilih</string>
-    <string name="no_selection">Tiada perkara diperiksa</string>
-    <string name="bookmark_empty">Tiada penanda halaman ditambah</string>
-    <string name="bookmark_added">Penanda ditambah</string>
-    <string name="bookmark_already_exists">Fail ini telah bookmarked</string>
-    <string name="bookmarks">Penanda</string>
 
     <string name="search_hint">Cari fail</string>
     <string name="query_error">Kesilapan pertanyaan</string>
@@ -148,7 +51,6 @@
     <string name="overwrite_question">Overwrite old file?</string>
     <string name="directory_pick">Select current directory</string>
     <string name="filename_hint">Nama fail</string>
-    <string name="choose_filename">Nama fail boleh dapat kosong!</string>
     <string name="pick_button_default">Pilihkan fail</string>
     <string name="copying">Menyalin&#8230;</string>
     <string name="copied">Berjaya disalin</string>
@@ -156,7 +58,6 @@
     <string name="moving">Bergerak&#8230;</string>
     <string name="moved">Berjaya berpindah</string>
     <string name="move_error">Sesetengah atau semua item Tidak boleh bergerak!</string>
-    <string name="nothing_to_paste">Tiada apa-apa pes. Salin atau Potong fail dahulu.</string>
 
     <plurals name="clipboard_info_items_to_copy">
         <item quantity="one">%1$d item to copy</item>
@@ -167,15 +68,7 @@
         <item quantity="other">%1$d items to move</item>
     </plurals>
 
-    <string name="clipboard_undo">Buat asal</string>
-    <string name="clipboard_dismiss">Abaikan</string>
-    <string name="preference_usebestmatch_title">Menggunakan aplikasi terbaik untuk ikon</string>
-    <string name="preference_usebestmatch_summary_off">use most recently installed app</string>
-    <string name="preference_usebestmatch_summary_on">use most suitable app</string>
 
-    <string name="paste">Pes</string>
-
-    <!--5.2.0 for filemanager menu-->
     <string name="file_sort">Disusun mengikut</string>
     <string name="file_sort_dialog_title">Disusun mengikut</string>
     <string name="file_sort_by_name">Nama</string>
